Change path style.css

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
 html {
-  font: 15px/1.7 solid "Lucida Grande", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  font: 
+    15px/1.7
+    "Lucida Grande", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
 }
 
 .rb__body {
